Updated SMTInterpol to 2.5-1413-g48b9d8c